# InfiniRT

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-pages.yml
cmake/: InfiniRTConfig.cmake.in
docs/: Doxyfile.in  README.md  backends.md  build.md  compatibility.md  getting-started.md
docs/api/: core-types.md  reference.md  runtime.md
docs/assets/: infini-rt.css
docs/superpowers/plans/: 2026-07-23-tensor-view-small-vector-downstream.md  2026-07-23-tensor-view-small-vector.md
docs/superpowers/specs/: 2026-07-23-tensor-view-small-vector-design.md
examples/: .clang-format  basic_runtime.cc  select_backend.cc  tensor_view.cc
examples/consumer_cmake/: CMakeLists.txt  README.md  main.cc
include/infini/: rt.h
include/infini/rt/: c_api.h
scripts/: compare_performance_results.py  generate_public_headers.py  mcc_wrapper.sh  run_performance_tests.py
src/: CMakeLists.txt  c_api.cc  caster.h  config.h  data_type.h  device.h  dispatcher.h  graph.h  handle.h  hash.h  runtime.h  status.h  tensor.cc  tensor.h  tensor_view.cc  tensor_view.h
src/ascend/: data_type_.h  device_.h  runtime_.h
src/cambricon/: data_type_.h  runtime_.h
src/common/: constexpr_map.h  generic_utils.h  small_vector.h  traits.h
src/cpu/: caster_.h  data_type_.h  device_.h
src/cuda/: runtime.h  runtime_utils.h
src/iluvatar/: data_type_.h  device_property.h  runtime_.h  runtime_utils.h
src/infini_rt/: data_type.h  device.h  hash.h  runtime.h  tensor_view.h
src/infini_rt/cpu/: data_type_.h  device_.h  runtime_.h
src/infini_rt/cuda/: runtime.h
src/infini_rt/iluvatar/: data_type_.h  device_.h  runtime_.h
src/infini_rt/metax/: data_type_.h  device_.h  runtime_.h
src/infini_rt/moore/: data_type_.h  device_.h  runtime_.h
src/infini_rt/nvidia/: data_type_.h  device_.h  runtime_.h
src/metax/: data_type_.h  device_property.h  runtime_.h  runtime_utils.h
src/moore/: data_type_.h  device_property.h  runtime_.h  runtime_utils.h
src/native/ascend/: data_type_.h  runtime_.h
src/native/cambricon/: data_type_.h  device_.h  runtime_.h
src/native/cpu/: data_type_.h  runtime_.h
src/native/cuda/: runtime_.h
src/native/cuda/ali/: data_type_.h  device_.h  runtime_.h
src/native/cuda/hygon/: data_type_.h  device_.h  runtime_.h
src/native/cuda/iluvatar/: data_type_.h  device_.h  runtime_.h
src/native/cuda/metax/: data_type_.h  runtime_.h
src/native/cuda/moore/: data_type_.h  device_.h  runtime_.h
src/native/cuda/nvidia/: data_type_.h  device_.h  runtime_.h
src/native/cuda/thead/: data_type_.h  device_.h  runtime_.h
src/native/hpcc/: runtime_.h
src/native/hpcc/mars/: data_type_.h  device_.h  runtime_.h
src/native/maca/: runtime_.h
src/native/maca/metax/: data_type_.h  device_.h  runtime_.h
src/nvidia/: data_type_.h  device_property.h  runtime_.h  runtime_utils.h
tests/: CMakeLists.txt  compile_install_consumer.cmake  install_consumer_smoke.cc  test_ambiguous_metax_family_autodetect.cmake  test_cambricon_graph_c_api.cc  test_core.cc  test_cpu_runtime.cc  test_default_runtime.cc  test_helper.h  test_native_graph.cc  test_native_runtime.cc  test_nvidia_graph.cc  test_nvidia_graph_c_api.cc  test_nvidia_runtime.cc  test_runtime_dispatch.cc  test_small_vector.cc  test_smoke.cc  test_tensor_view.cc  test_tensor_view_allocations.cc
tests/install_consumer/: CMakeLists.txt
tests/performance/: CMakeLists.txt  perf_common.h  perf_memory.cc  perf_runtime_dispatch.cc  perf_tensor_view.cc
